# faide

./: LICENSE
.agents/skills/testing-faide-trader/: SKILL.md
faide-trader/: .gitignore
faide-trader/faide-trader-backend/: pyproject.toml
faide-trader/faide-trader-backend/app/: database.py  main.py  schemas.py
faide-trader/faide-trader-backend/app/models/: __init__.py  portfolio.py
faide-trader/faide-trader-backend/app/routers/: __init__.py  accounts.py  bots.py  market_data.py  portfolios.py  recalculate.py  trades.py  transactions.py
faide-trader/faide-trader-backend/app/services/: calculation_engine.py  market_data.py  trade_generator.py
faide-trader/faide-trader-backend/scripts/: generate_portfolio.py
faide-trader/faide-trader-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
faide-trader/faide-trader-frontend/src/: App.tsx  index.css
faide-trader/faide-trader-frontend/src/components/: CreateBotDialog.tsx  CreateDialog.tsx  CreateTradeDialog.tsx  EditBotDialog.tsx  EditableField.tsx  EditableStatsCard.tsx  EquityChart.tsx  GenerateTradesDialog.tsx  MarketDataImportDialog.tsx  PeriodPnlView.tsx  PnlChart.tsx  StatsCard.tsx  SymbolPnlView.tsx  SymbolSelector.tsx  TradeTable.tsx  TransactionsView.tsx
faide-trader/faide-trader-frontend/src/lib/: api.ts  exportReport.ts
